syntax = "proto3";

package example;

option go_package = "grpc_client/testdata";

// UserService provides user management operations
service UserService {
  // GetUser retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (User);
  
  // CreateUser creates a new user
  rpc CreateUser(CreateUserRequest) returns (User);
  
  // ListUsers returns all users
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

message ListUsersResponse {
  repeated User users = 1;
  string next_page_token = 2;
}
